--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
   <header>
-    <h1>Sticky Header</h1>
+    <h1>Lawn Stars LLC</h1>
   </header>
 
   <div class="content">
@@ -42,4 +42,6 @@
   </script>
 
 </body>
+<h1>Hi welcome</h1>
+
 </html>
