--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       padding: 20px;
     }
   </style>
+<link rel="stylesheet" href="styles.css">
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
 
@@ -24,6 +27,8 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
+            <a href="page2.html" class="nav-link">About</a>
+
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
@@ -40,8 +45,9 @@
   <main role="main">
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-4">Welcome to My Awesome Website!</h1>
-        <p class="lead">This is a simple and responsive website built using HTML, CSS, and Bootstrap.</p>
+        <h1 class="display-4">We love lawn care!</h1>
+        <img src="Rhododendron_catawbi_67qVuPWEzS2f.png" alt="my favorite bush" height="200">
+        <p class="lead"Welcome to Lawn Stars, your local lawn care company.</p>
       </div>
     </div>
 
@@ -49,7 +55,6 @@
       <div class="row">
         <div class="col-md-6">
           <h2>About Us</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et velit sed dolor fermentum consequat vel nec justo.</p>
         </div>
         <div class="col-md-6">
           <h2>Contact Us</h2>
@@ -58,7 +63,10 @@
       </div>
     </div>
   </main>
-
+<video width="1280" height="720" controls>
+  <source src="No title.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
   <footer class="text-muted text-center">
     <div class="container">
       <p>&copy; 2024 My Awesome Website</p>
