--- a/page3.html
+++ b/page3.html
@@ -1,4 +1,33 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lawn Stars LLC</title>
+    <!-- Link to your Pac-Man game script (replace 'your-pacman-game.js' with the actual script) -->
+    <script src="page2.html"></script>
+</head>
+<body>
+
+    <h1>Welcome to Lawn Stars LLC</h1>
+
+    <!-- Pac-Man game container -->
+    <div id="pacman-container">
+        <!-- This is where your Pac-Man game will be embedded -->
+    </div>
+
+    <!-- Navigation links -->
+    <nav>
+        <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
+
+</body>
+</html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Maintenance - Moota.co</title>
